force-app/main/default/objects/Process_Version__c/Process_Version__c.object-meta.xml
<!--
================================================================================
  OBJECT: Process_Version__c
  DESCRIPTION: Historical versions of published process diagrams
  
  AUTHOR: Dennis van Musschenbroek (DvM) - Cobra CRM B.V.
  CREATED: 2024-12-12
  VERSION: 1.0.0
  API VERSION: 62.0
  
  EXPLANATION:
  ============
  This object maintains version history for process diagrams. Each time a
  process is published, a new version record is created with a snapshot
  of the canvas state at that point in time.
  
  Benefits:
  - Audit trail of all process changes
  - Compare versions to see what changed
  - Restore previous versions if needed
  - Compliance and change management documentation
  
  RELATIONSHIPS:
  ==============
  - Process__c (Master-Detail) - Parent process
  - Published_By__c (Lookup to User) - Who published
  
-->
<CustomObject>
    <description>Historical versions of process diagrams. A new version is created each time a process is published, providing complete audit trail and rollback capability.</description>
    <label>Process Version</label>
    <nameField>
        <displayFormat>VER-{00000}</displayFormat>
        <label>Version Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>