force-app/main/default/objects/Process_Version__c/fields/Canvas_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Snapshot__c</fullName>
    <description>Frozen copy of the Canvas_JSON at the time of publishing. Preserves the exact diagram state for this version.</description>
    <inlineHelpText>System field - snapshot of diagram at time of publish.</inlineHelpText>
    <label>Canvas Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>