force-app/main/default/objects/Process_Version__c/fields/Change_Notes__c.field-meta.xml
<CustomField>
    <fullName>Change_Notes__c</fullName>
    <description>Notes describing what changed in this version compared to the previous version.</description>
    <inlineHelpText>Describe what changed in this version.</inlineHelpText>
    <label>Change Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>