force-app/main/default/objects/Process_Version__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <description>The parent process this version belongs to.</description>
    <label>Process</label>
    <referenceTo>Process__c</referenceTo>
    <relationshipLabel>Version History</relationshipLabel>
    <relationshipName>Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>