force-app/main/default/objects/Process_Version__c/fields/Published_By__c.field-meta.xml
<CustomField>
    <fullName>Published_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who published this version.</description>
    <inlineHelpText>Who published this version?</inlineHelpText>
    <label>Published By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Published_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>