force-app/main/default/objects/Process_Version__c/fields/Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Published_Date__c</fullName>
    <description>The date and time when this version was published.</description>
    <inlineHelpText>When was this version published?</inlineHelpText>
    <label>Published Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>