force-app/main/default/objects/Process_Version__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <description>The sequential version number (1, 2, 3, etc.) within this process.</description>
    <inlineHelpText>Version number at time of publish.</inlineHelpText>
    <label>Version</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>